--- a/style.css
+++ b/style.css
@@ -1,738 +1,163 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:ital@0;1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,700;1,700&display=swap');
-
-* {
+/* Общие стили */
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    background-color: #0e1a3a;
+    color: white;
 }
 
-html {
-    font-size: 18px;
-    font-family: "Mulish", sans-serif;
-
-}
-
-/* header */
-
-
+/* Шапка */
 header {
-    padding: 55px;
-    padding-bottom: 0;
-  
-}
-
-nav.menu {
     display: flex;
-    align-items: center;
-    border: solid 2px black;
-    background: linear-gradient(000deg, #ffffff ,grey,rgb(68, 71, 71),#303436);
-}
-
-nav.menu a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #ffffff;
-    transition: 300ms;
-}
-nav.menu a:hover{
-    color: #458ff6;
-}
-
-a.menu_logo {
-    display: flex;
-    align-items: center;
-    margin-right: auto;
-    text-indent: 20px;
-}
-
-.menu_link .menu_link-active {
-    padding: 10px;
-    margin: 10px;
-}
-
-.menu_link-active {
-    font-weight: bold;
-}
-
-
-/*welcome*/
-
-.welcome {
-    padding: 55px;
-    display: flex;
-    align-items: center;
-    justify-self: center;
-
-    
-    margin: 120px;
-}
-
-.welcome_text {
-    max-width: 450px;
-}
-
-.welcome_header {
-    font-size: 46px;
-    margin-bottom: 28px;
-}
-
-.welcome_button {
-    margin-top: 20px;
-
-
-    display: inline-block;
-    padding: 20px 60px;
-    background-color: aqua;
-    color: #fff;
-    border-radius: 55px;
-    transition: 300ms;
-}
-.welcome_button:hover{
-    background-color: #fff;
-    color: #458ff6;
-}
-
-.welcome_img {
-    max-width: 500px;
-    display: flex;
-    left: 5px;
-
-}
-
-/*our_services*/
-
-.our_services {
-    padding: 55px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
     justify-content: space-between;
-
-    background: url("./img/i.webp") no-repeat;
-    background-size: cover;
-}
-
-.our_services p {
-    color: grey;
-    flex-direction: column;
     align-items: center;
-    max-width: 900px;
-}
-
-.our_services_top h1 {
     padding: 20px;
-    margin: 20px;
-    border-bottom: 2px solid #333;
-    text-align: center;
+    background: #172a55;
 }
 
-.our_services_content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.service_card {
-    width: 350px;
-    padding: 40px;
-    margin: 35px;
-    box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
-    border-radius: 20px;
-    background-color: #fff;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-
-.service_card h3 {
+.logo {
     font-size: 24px;
-    font-weight: 700;
-    margin-bottom: 20px;
-}
-
-.more-btn {
-    padding:    9px;
-    border-radius: 55px;
-    color: #458ff6;
-    text-decoration: none;
-    border: 1px solid #458ff6;
-    display: block;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-
-    transition: 300ms;
-    margin-top: 40px;
-}
-.more-btn:hover{
-    background-color: #458ff6;
-    color: #fff;
-}
-
-.enfo  {
-   
-    padding: 55px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 15px
-}
-
-.enfo_image 
-{
-    max-width: 500px;
-}
-
-.wrot 
-{
-    max-width: 450px;
-    margin-bottom: 120px;
-    margin-top: 5px;
-}
-
-.wrot h1{
-    padding: 20px;
-    padding-left: 0;
-    margin-bottom: 20px;
-    border-bottom: 2px solid #333;
-}
-
-
-.download{
-    padding: 55px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.download-image{
-    max-width: 500px;
-} 
-
-.download_text{
-    max-width: 450px;
-    margin-bottom: 120px;
-    
-}
-
-.download_text h1 {
-    padding: 20px;
-    padding-left: 0;
-    margin-bottom: 20px;
-    border-bottom: 2px solid #333;
-}
-
-
-/*latest_article*/
-
-.latest_articles{
-    padding: 55px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: linear-gradient(000deg, #000000 ,rgb(56, 56, 56),rgb(255, 255, 255));
-   
- 
-    
-    
-    
-    
-    
-margin-bottom: 120px;
-}
-
-.la_top{
-    text-align: center;
-    max-width: fit-content;
-    border-bottom: 2px solid #333;
-    padding: 20px;
-    margin-bottom: 40px;
-    color: rgb(0, 183, 255);
-
-}
-
-.la_content{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.article_card{
-    width: 35px;
-    border-radius: 20px;
-    margin: 3px;
-    background-color: #fff;
-    box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
-}
-
-.article_card_text{
-    padding: 33px;
-    color: rgb(253, 253, 253);
-}
-.article_card_text-2{
-    padding: 33px;
-    color: rgb(255, 255, 255);
-}
-
-
-.article_card_text h3 {
-    margin-bottom: 20px;
-}
-
-.article_card_text p {
-    font-size: 16px;
-    font-weight: 300;
-}
-
-.article_link{
-    margin-top: 20px;
-    display: inline-block;
-    color: #458ff6;
-    text-decoration: none;
-}
-
-.article_link img{
-    margin-left: 10px;
-}
-
-
-
-/*VIDIO*/
-
-.vidio{
-    padding: 55px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-
-
-    margin-bottom: 120px;
-}
-
-
-
-
-
-.vidio_top h1{
-    border-bottom: 2px solid #333;
-    padding: 20px;
-    margin-bottom: 40px;
-}
-
-.vidio_content iframe{
-    border-radius:  10px;
-    max-width: 300%;
-    max-width: 100%;
-    min-width: 800%;
-    min-height: 450px;
-}
-
- .play-btn{
-    cursor: pointer;
-    align-items: center;
-    justify-content: center;
-    display: contents;
-    background-color: #67c3f3;
-    border: solid 1px grey;
-    border-radius: 2px;
-} 
-.play-btn:hover{
-    background-color: #fb9bd2;
-}
-
-
-/*picing*/
-
-.pricing{
-    padding: 55px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #fafafa;
-}
-
-.pricing_top{
-    border-bottom: 2px solid #333;
-    padding: 20px;
-    margin-bottom: 40px;
-}
-
-.pricing_content{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: baseline;
-}
-.pricing_card{
-    padding: 40px;
-    margin: 35px;
-    border: solid 1px grey;
-    border-radius: 28px;
-    background-color: #fff;
-    box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
-}
-.pricing_card p{
-    font-size: 16px;
-    font-weight: 300;
-    color: #777;
-}
-.pricing_number{
-    font-size: 40px;
-    font-weight: 700;
-
-}
-.pricing_card ul{
-   margin-top: 10px;
-   margin-left: 0;
-   list-style: none;
-   font-size: 16px;
-   font-weight: 300;
-}
-.pricing_card .more-btn{
-    margin-top: 15px;
-    margin: 3px;
-}
-.premium_card{
-    border:  solid 1px #fb9bd2;
-    border-radius: 25px;
-}
-.Bizznes_card{
-    border: 1px solid rgb(132, 0, 255);
-    border-radius: 25px;
-    padding: 50px;
-    margin: 35px;
-}
-.premium_card ul li img{
-    margin-right: 10px;
-}
-.premium-btn{
-    padding: 28px 60px;
-    display: inline-block;
-    border-radius: 55px;
-    text-decoration: none;
-    font-weight:  700;
-    color: #fb9bd2;
-    border: 1px solid #fb9bd2;
-
-    box-shadow:  0px 0px 20px 1px rgba(251, 155, 218, 0.15);
-
-    margin-top: 15px;
-
-    cursor: pointer;
-    transition: 300ms;
-    margin: 3px;
-}
-
-
-.premium-btn:hover{
-    background-color: #fb9bd2;
-    color: #fff;
-}
-
-/* contact */
-
-.contact{
-    padding: 55px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
- }
- 
- .contact_top{
-    border-bottom: 2px solid #333;
-    padding: 20px;
-    margin-bottom: 40px;
- }
- 
- .contact_form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 100px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 20px 1px rgba(251, 155,210,0.5,);
- }
- 
- .input_group{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
- }
- 
- .input_group label{
-    font-size: 16px;
-    color: #458ff6;
-    padding: 10px 0;
-    padding-top: 30px;
- }
- 
- .input_group input{
-    padding: 10px;
-    font-family: "Mulish",sans-serif;
-    font-size: 18px;
-    border-radius: 6px;
-    border: 1px solid #458ff6;
- }
- 
- .input_group input::placeholder{
-    color: #999;
- }
- 
- .input_group button[type="submit"]{
-    margin: 30px;
-    padding: 10px 25px;
-    font-size: 16px;
     font-weight: bold;
-    background-color: #fb9bd2;
-    border: 1px solid #fb9bd2;
-    border-radius: 6px;
-    color: #fff;
-    cursor: pointer;
-    transition: 300ms;
- 
-    display: flex;
-    align-items: center;
- }
- .input_group button[type="submit"] button{
-    text-align: center;
-    justify-content: center;
-    align-items: center;
- }
- 
- .input_group button[type="submit"] img {
- margin-left: 60px;
- }
+}
 
- .input_group button[type="submit"]:hover{
-    color: #fb9bd2;
-    background-color: #fff;
- }
-
-/* footer */
-
-footer{
-     padding: 200px 800px; 
-    background: linear-gradient(180deg, #ffffff 0%, #505050 80%);
-    font-weight: 300;
-     display: flex;
-    align-items: center;
-    justify-content: space-evenly; 
- }
- 
- .footer_left{
-    display: flex;
-    flex-direction: column;
-    max-width: 400px;
- }
- 
- .footer_logo{
-    display: flex;
-    align-items: center;
-    text-indent: 10px;
- }
- 
- .footer_left p{
-    margin: 30px 0;
-    margin-left: 40px;
- }
- 
- .footer_rights{
-    display: flex;
- }
- 
- .footer_list{
-    padding: 10px;
-    margin:10px;
- }
- 
- .footer_list p {
- font-weight: bold;
- padding: 20px 0;
- margin-left: 40px;
- }
- 
- .footer_list ul{
+nav ul {
     list-style: none;
-    margin-left: 40px;
- }
- 
- .footer_list ul li a{
-    color: #ffffff;
-    display: block;
-    padding: 15px 20px;
-    padding-right: 80px;
-    margin-left: 40px;
+    display: flex;
+    gap: 20px;
+}
+
+nav ul li a {
+    color: white;
     text-decoration: none;
- }
- 
- .footer_list ul li a:hover{
- text-decoration: underline;
- }
- 
+}
 
- @media (max-width: 768px) {
-   
-     .welcome,
-     
-     .our_services,
-     
-     .vidio,
-     .pricing,
-     .contact{
-        padding: 300px;
-        margin-bottom:600px;
-     }
-      nav.menu{
-        /* margin: auto;
+.btn {
+    background: #ff9800;
+    border: none;
+    padding: 10px 20px;
+    color: white;
+    cursor: pointer;
+}
+
+/* Главный блок */
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
+    text-align: left;
+}
+
+.hero img {
+    width: 300px;
+}
+
+.hero-content h1 {
+    font-size: 36px;
+}
+
+/* Курсы */
+.courses {
+    text-align: center;
+    padding: 50px;
+}
+
+.course-list {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.course {
+    background: #1e3b70;
+    padding: 20px;
+    border-radius: 8px;
+    width: 200px;
+}
+
+/* Отзывы */
+.testimonials {
+    text-align: center;
+    padding: 50px;
+}
+
+.reviews {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.review {
+    background: #2c4880;
+    padding: 15px;
+    border-radius: 8px;
+}
+
+/* FAQ */
+.faq {
+    text-align: center;
+    padding: 50px;
+}
+
+.faq-item {
+    background: #1e3b70;
+    padding: 10px;
+    margin: 10px auto;
+    width: 50%;
+    border-radius: 5px;
+}
+
+/* Футер */
+footer {
+    text-align: center;
+    padding: 20px;
+    background: #172a55;
+}
+
+
+
+/* ======= АДАПТАЦИЯ ДЛЯ ТЕЛЕФОНОВ ======= */
+@media (max-width: 768px) {
+    header {
         flex-direction: column;
-        align-items: center;
-        max-width: 300px; */
-        display: none;
-     }
-/*
-     nav.menu a{
-        margin: 5px 0px;
-        padding: 15px 40px;
-        border: 1px solid #458ff6;
-        border-radius: 100%;
-        width: 100%;
-     }
-
-     nav.menu a:first-child {
-        border: none;
-     } */
-
-     .welcome {
-        flex-direction: column;     
+        align-items: flex-start;
     }
-    .welcome_header{
+
+    nav ul {
+        display: none;
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+        background: #1a2b5d;
+        padding: 10px;
+    }
+
+    nav ul li {
         text-align: center;
     }
 
-    .welcome_img {
-        display: none;
-    }
-    .enfo,
-    .download{
-       display: none;
+    .menu-btn {
+        display: block;
     }
 
-    .vidio_content iframe{
-       min-width: 300px; 
-       min-height: 280px;
-    }
-    .contact_form{
-        padding: 20px 20px;
-    }
-    footer{
+    .hero {
         flex-direction: column;
-        padding: 768px;
+        text-align: center;
+        padding: 20px;
     }
-    .contact,
-    .GAlery{
-        display: none;}
 
-        .pricing{
-            margin: 0;
-        }
-        .article_card{
-            padding: 30px;
-         
-        }
-        .article-img{
-            display: none;
-        }
-        .article_card_text{
-            text-align: center;
-                }
-                .la_content{
-                    background-color: none;
-                    padding: 300px;
-                }
-}         
-
-@media (max-width: 570px) {
-    .service_card,
-    .article_card{
-        width: 300px;
-
+    .hero img {
+        width: 100%;
+        max-width: 300px;
     }
-    .article_card img {
-        max-width: 100%;
-    }
-    .footer_rights{
+
+    .course-list {
         flex-direction: column;
+        align-items: center;
     }
-}
 
-.hidden{
-    display: none;
-}
-.defult{
-    padding: 20px 50px;
-    border-radius: 55px;
-    color: #458ff6;
-    text-decoration: none;
-    border: 1px solid #458ff6;
-
-    margin-top: 15px;
-    transition: 300ms;
-}
-
-.modal-conves{
-    position: fixed;
-    top: 0;
-    width:100%;
-    height: 100%;
-    background: linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55));
-}
-
-.modal{
-    padding: 25px;
-    box-shadow: 0 0 20px 0 #999;
-}
-.modal-close{
-    cursor: pointer;
-    text-align: right;
-}
-.video-container{
-    margin-top: 25px; 
-}
-.foto-container{
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.foto-container_top{
-    text-align: center;
-    max-width: fit-content;
-    border-bottom: 2px solid #333;
-    padding: 20px;
-    margin-bottom: 40px;
-    color: rgb(0, 183, 255);
-    
-}
-
-.card-foto{
-    width: 300px;
-    margin: 10px;
-    overflow: hidden;
-    border: 1px solid black;
-    background-color: lightblue;
-}
-.foto-container:hover > :not(:hover){
-    optical: 0.3s;
-}
-.card-foto:hover{
-    transform: scale(1.1);
+    .faq-item {
+        width: 90%;
+    }
 }
